<resources

    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"

    >
    <string name="app_name">Sunshine</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="message_error_no_maps_app">Please install a Maps app.</string>
    <string name="message_error_no_weather_info">No Weather Information Available</string>
    <string name="message_error_no_weather_info_no_connectivity">
        No weather information available. The network is not available to fetch data.
    </string>
    <string name="message_error_no_weather_info_server_down">
        No weather information available. The server is not returning data.
    </string>
    <string name="message_error_no_weather_info_server_error">
        No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.
    </string>
    <string name="message_error_no_weather_info_invalid_location">
        No weather information available. The location in settings is not recognized by the weather server.
    </string>
    <string name="message_error_no_fine_location_perm">
        Location permission denied.
    </string>
    <string name="message_info_places_attribution_text">Powered by Google</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">Nairobi</string>
    <string name="pref_temperature_unit_key" translatable="false">temperature unit</string>
    <string name="pref_temperature_unit_label">Pick Your Units</string>
    <string name="pref_temperature_unit_metric_value" translatable="false">metric</string>
    <string name="pref_temperature_unit_imperial_value" translatable="false">imperial</string>
    <string name="pref_temperature_unit_metric_label">Metric</string>
    <string name="pref_temperature_unit_imperial_label">Imperial</string>
    <string name="pref_last_notification_key">last_notification
    </string>
    <string name="pref_enable_notifications_key">enable_notifications
    </string>
    <string name="pref_enable_notifications_label">Weather Notifications
    </string>
    <string name="pref_enable_notifications_true_summary">Enabled
    </string>
    <string name="pref_enable_notifications_false_summary">Not Enabled
    </string>
    <string name="pref_enable_notifications_default_value" translatable="false">true</string>
    <string name="pref_location_status_key">location_status_storage</string>
    <string name="pref_location_summary_invalid">Invalid location (<xliff:g id="location_setting">%1$s</xliff:g>)
    </string>
    <string name="pref_location_summary_unknown">Validating location. . . (<xliff:g id="location_setting">%1$s</xliff:g>)
    </string>
    <string name="pref_location_summary_unnamed_place_address">
        (<xliff:g id="latitude">%1$.2f</xliff:g>, <xliff:g id="longitude">%2$.2f</xliff:g>)
    </string>
    <string name="pref_icon_pack_key" translatable="false">icon_pack</string>
    <string name="pref_icon_pack_label">Icon Pack</string>
    <string name="pref_icon_pack_colored_value" translatable="false">
        https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Colored/art_<xliff:g id="description">%s</xliff:g>.png
    </string>
    <string name="pref_icon_pack_mono_value" translatable="false">
        https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Mono/art_<xliff:g id="description">%s</xliff:g>.png
    </string>
    <string name="pref_icon_pack_colored_label">Colored</string>
    <string name="pref_icon_pack_mono_label">Mono</string>
    <string name="pref_location_latitude_key" translatable="false">location_latitude</string>
    <string name="pref_location_longitude_key" translatable="false">location_longitude</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_widget_today">Sunshine Today</string>
    <string name="title_widget_details">Sunshine Details</string>
    <string name="a11y_toolbar_icon">Sunshine</string>
    <string name="a11y_detail_weather_art_format">
        Forecast icon: <xliff:g id="weather_description">%1$s</xliff:g>
    </string>
    <string name="a11y_detail_weather_icon_format">
        Forecast icon: <xliff:g id="weather_description">%1$s</xliff:g>
    </string>
    <string name="a11y_detail_weather_description_format">
        Forecast: <xliff:g id="description">%1$s</xliff:g>
    </string>
    <string name="a11y_high_temperature_format">
        High: <xliff:g id="high">%1$s</xliff:g>
    </string>
    <string name="a11y_low_temperature_format">
        Low: <xliff:g id="low">%1$s</xliff:g>
    </string>
    <string name="a11y_humidity_format">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure_format">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind_format">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
    <string name="a11y_current_location_description">Place picker</string>
    <string name="a11y_widget_today_small">
        <xliff:g id="forecast">%1$s</xliff:g>, High: <xliff:g id="high">%2$s</xliff:g>
    </string>
    <string name="a11y_widget_today_medium">
        <xliff:g id="forecast">%1$s</xliff:g>, High: <xliff:g id="high">%2$s</xliff:g>, Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="a11y_widget_today_large">
        <xliff:g id="forecast">%1$s</xliff:g>, High: <xliff:g id="high">%2$s</xliff:g>, Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="a11y_widget_detail_list_item">
        <xliff:g id="date">%1$s</xliff:g>, <xliff:g id="forecast">%2$s</xliff:g>, High: <xliff:g id="high">%3$s</xliff:g>, Low: <xliff:g id="low">%4$s</xliff:g>
    </string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="humidity_label">Humidity</string>
    <string name="pressure_label">Pressure</string>
    <string name="wind_label">Wind</string>
    <string name="sync_account_type">sunshine.joslittho.com</string>
    <string name="content_authority">com.joslittho.sunshine.app</string>
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string>
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string>
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>
    <string name="condition_unknown">Unknown (<xliff:g id="weather_condition">%1$d</xliff:g>)</string>
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    <string name="detail_icon_transition_name" translatable="false">detail_transition_name</string>
    <string name="format_weather_icon_transition_name">
        <xliff:g id="adapter_class_name">%1$s</xliff:g>-<xliff:g id="view_holder_position">%2$d</xliff:g>
    </string>
    <string name="muzei_description">Today\'s weather</string>
</resources>