<?xml version="1.0" encoding="utf-8"?>

<!--

 Sunshine

 A simple weather app

 Copyright (C) 2016 Kairu Joshua Wambugu

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/.

 -->

<!-- General preferences -->

<!--

    location
    units
    notifications
    icon packs

-->

<PreferenceScreen

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <!-- location -->

    <!--
    title - label to be displayed to user
    key - the key value in SharedPreferences
    -->

    <com.joslittho.sunshine.view.LocationEditTextPreference

        android:key="@string/pref_location_key"

        android:title="@string/pref_location_label"

        android:defaultValue="@string/pref_location_default"

        android:inputType="text"

        android:singleLine="true"

        app:minLength="3"

        />

    <!-- temperature unit -->

    <!--
    entryValues - list of all possible values in the o
    -->

    <ListPreference

        android:key="@string/pref_temperature_unit_key"

        android:title="@string/pref_temperature_unit_label"

        android:entries="@array/temperature_units_entries"

        android:entryValues="@array/temperature_units_entry_values"

        android:defaultValue="@string/pref_temperature_unit_metric_value"

        />

    <!-- notifications -->

    <CheckBoxPreference

        android:title="@string/pref_enable_notifications_label"

        android:key="@string/pref_enable_notifications_key"

        android:defaultValue="@string/pref_enable_notifications_default_value"

        android:summaryOff="@string/pref_enable_notifications_false_summary"

        android:summaryOn="@string/pref_enable_notifications_true_summary"

        />

    <!-- icon packs -->

    <ListPreference

        android:key="@string/pref_icon_pack_key"

        android:title="@string/pref_icon_pack_label"

        android:entries="@array/icon_packs_entries"

        android:entryValues="@array/icon_packs_entry_values"

        android:defaultValue="@string/pref_icon_pack_colored_value"

        />

</PreferenceScreen>