<?xml version="1.0" encoding="utf-8"?>

<!--

 Sunshine

 A simple weather app

 Copyright (C) 2016 Kairu Joshua Wambugu

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/.

-->

<!-- detail for phone landscape and tablet portrait and landscape -->

<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    >

    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:orientation="horizontal"

        android:baselineAligned="false"

        >

        <FrameLayout

            android:layout_width="0dp"

            android:layout_height="match_parent"

            android:layout_weight="1"

            >

            <!-- detail for today's temperature and forecast -->

            <include layout="@layout/detail_today_grid"

                android:layout_width="match_parent"

                android:layout_height="match_parent"

                />

            <!-- toolbar -->

            <android.support.v7.widget.Toolbar

                android:id="@+id/fd_toolbar"

                android:layout_width="match_parent"

                android:layout_height="?attr/actionBarSize"

                android:elevation="0dp"

                android:background="@android:color/transparent"

                />

        </FrameLayout>

        <android.support.v7.widget.GridLayout

            android:id="@+id/detail_additional_pane"

            android:layout_width="wrap_content"

            android:layout_height="match_parent"

            android:paddingRight="@dimen/forecast_detail_horizontal_padding"

            android:paddingEnd="@dimen/forecast_detail_horizontal_padding"

            android:background="@color/detail_accent_pane_background"

            app:columnCount="2"

            >

            <!-- some space for padding on top -->

            <android.support.v4.widget.Space

                app:layout_columnSpan="2"

                app:layout_rowWeight="1"

                />

            <!-- TextView to hold humidity label -->

            <TextView

                android:id="@+id/detail_tv_humidity_label"

                android:fontFamily="sans-serif"

                android:gravity="center_vertical"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                android:textColor="@color/detail_accent_label"

                android:text="@string/humidity_label"

                android:paddingLeft="@dimen/layout_padding"

                android:paddingRight="@dimen/layout_padding"
                
                android:paddingBottom="@dimen/layout_padding"

                />

            <!-- TextView to hold humidity value -->

            <TextView

                android:id="@+id/detail_tv_humidity_value"

                android:fontFamily="sans-serif"
                
                android:gravity="center_vertical"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                android:textColor="@android:color/white"

                tools:text="38%"

                />

            <!-- TextView to hold pressure label -->

            <TextView

                android:id="@+id/detail_tv_pressure_label"

                android:fontFamily="sans-serif"

                android:gravity="center_vertical"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                android:text="@string/pressure_label"

                android:textColor="@color/detail_accent_label"

                android:paddingTop="@dimen/layout_padding"
                
                android:paddingLeft="@dimen/layout_padding"

                android:paddingRight="@dimen/layout_padding"

                android:paddingBottom="@dimen/layout_padding"

                />

            <!-- TextView to hold pressure value -->

            <TextView

                android:id="@+id/detail_tv_pressure_value"

                android:gravity="center_vertical"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"

                android:textColor="@android:color/white"

                tools:text="995 hPa"

                />

            <!-- TextView to hold wind label -->

            <TextView

                android:id="@+id/detail_tv_wind_label"

                android:fontFamily="sans-serif"

                android:gravity="center_vertical"

                android:textColor="@color/detail_accent_label"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                android:text="@string/wind_label"

                android:paddingTop="@dimen/layout_padding"

                android:paddingLeft="@dimen/layout_padding"

                android:paddingRight="@dimen/layout_padding"

                />

            <!-- TextView to hold wind value -->

            <TextView

                android:id="@+id/detail_tv_wind_value"

                android:gravity="center_vertical"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"

                android:textColor="@android:color/white"

                tools:text="4km/h NW"

                />
            
            <!-- some space to pad out the bottom -->
            
            <android.support.v4.widget.Space 
                
                app:layout_columnSpan="2"
                
                app:layout_rowWeight="1"
                
                />

        </android.support.v7.widget.GridLayout>

        <!--<android.support.v7.widget.GridLayout-->
            <!--android:id="@+id/detail_additional_pane"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--app:columnCount="2"-->
            <!--android:background="@color/detail_accent_pane_background"-->
            <!--android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"-->
            <!--android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"-->
            <!--&gt;-->

            <!--<android.support.v7.widget.Space-->
                <!--app:layout_columnSpan="2"-->
                <!--app:layout_rowWeight="1" />-->

            <!--<TextView-->
                <!--android:id="@+id/detail_pressure_label_textview"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:gravity="center_vertical"-->
                <!--android:text="@string/pressure_label"-->
                <!--android:textColor="@color/detail_accent_label"-->
                <!--android:textAppearance="@style/TextAppearance.AppCompat.Title"-->
                <!--android:paddingTop="@dimen/layout_padding"-->
                <!--android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"-->
                <!--android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"-->
                <!--android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"-->
                <!--/>-->


            <!--<TextView-->
                <!--android:id="@+id/detail_pressure_textview"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:gravity="center_vertical"-->
                <!--tools:text="995 hPa"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textAppearance="@style/TextAppearance.AppCompat.Title"-->
                <!--/>-->

            <!--<TextView-->
                <!--android:id="@+id/detail_wind_label_textview"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:gravity="center_vertical"-->
                <!--android:text="@string/wind_label"-->
                <!--android:textColor="@color/detail_accent_label"-->
                <!--android:textAppearance="@style/TextAppearance.AppCompat.Title"-->
                <!--android:paddingTop="@dimen/layout_padding"-->
                <!--android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"-->
                <!--android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"-->
                <!--/>-->

            <!--<TextView-->
                <!--android:id="@+id/detail_wind_textview"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:gravity="center_vertical"-->
                <!--tools:text="4km/h NW"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textAppearance="@style/TextAppearance.AppCompat.Title"-->
                <!--/>-->

            <!--<android.support.v7.widget.Space-->
                <!--app:layout_columnSpan="2"-->
                <!--app:layout_rowWeight="1" />-->

        <!--</android.support.v7.widget.GridLayout>-->

    </LinearLayout>

</FrameLayout>